welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: Unmatched closing brace '}' ignored here
    	}else{droite()}
        ^ZigZag:17: error: ';' expected but 'else' found.
    	}else{droite()}
         ^ZigZag:50: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:53: error: expected start of definition
	override def forward()  {
                 ^ZigZag:56: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:59: error: expected start of definition
	override def backward() {
                 ^ZigZag:62: error: Unmatched closing brace '}' ignored here
}
^